Add option to limit files passed to compiler. Fixes #566.
